--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,125 @@
-.App {
-  text-align: center;
+.pageWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pageWrapper img {
+  width: 700px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sortWrapper {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.sortWrapper select {
+  margin: 0 10px;
+}
+
+.imageWrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.imageWrapper img {
+  width: 200px;
+  margin: 10px;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+
+.imageWrapper img:hover {
+  width: 210px;
+  margin: 2px 5px;
+}
+
+.modalBackground {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modalBox {
+  background-color: white;
+  display: flex;
+  width: 570px;
+  height: 460px;
+  flex-direction: column;
+  border-radius: 10px;
+  overflow: scroll;
+  position: relative;
+}
+
+.topSection {
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.topSection img {
+  width: 50%;
+}
+.topSection::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 4px;
+  right: 0;
+  height: 40px;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+.bottomSection {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+h1,
+h5,
+h6 {
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.movieStats {
+  display: flex;
+}
+
+h6 {
+  margin: 0 5px;
+}
+
+p {
+  font-weight: 300;
+  text-align: center;
+  font-size: 14px;
+}
+
+.closeIcon {
+  color: black;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 10;
+  margin: 10px;
+  font-size: 20px;
+  font-weight: 900;
+  text-shadow: 0px 0px 10px white;
+  cursor: pointer;
 }
